[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ikin-expert"
version = "2.0.0"
description = "High-Performance Rete Engine with Hash Joins for Python."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT OR Apache-2.0"}
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [
  {name = "Kalluan Cley Fiuza", email = "kalluancartoon@gmail.com"},
]
keywords = ["expert-system", "rete-algorithm", "rule-engine", "ai", "inference", "hash-join"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.dependencies]
pydantic >= 2.0.0

[project.urls]
"Homepage" = "https://github.com/kalluancartoon/ikin-expert"
"Bug Tracker" = "https://github.com/kalluancartoon/ikin-expert/issues"
